[tool.poetry]
name = "mlflowstack"
version = "0.1.0"
description = ""
authors = ["Burak Ince <burak.ince@linux.org.tr>"]

[tool.poetry.dependencies]
python = "3.11.*"
mlflow = { version = "2.10.2", extras = ["extras", "pipelines"] }
# azure-storage-blob = "^12.11.0"
google-cloud-storage = "^2.14.0"
SQLAlchemy = "^1.4.51"
boto3 = "^1.26.66"
psycopg2-binary = "^2.9.9"
# protobuf = "<5.0.0"
PyMySQL = "^1.1.0"
cryptography = "38.0.4"

[tool.poetry.dev-dependencies]
pytest = "^7.4.4"
testcontainers = "^3.7.1"
# requests = "^2.27.1"
cloudpickle = "^2.2.1"
# pre-commit = "^3.0.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
